fix styling on mobile for share button

--- a/style.css
+++ b/style.css
@@ -550,6 +550,13 @@ p {
   .arrow-right {
     display: none;
   }
+  .share-container{
+    /* position: relative; */
+  }
+  .share-info{
+    position: relative;
+    top:.18rem
+  }
 }
 /* End Mobile Here */
 
